# Hermes

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT.md  GEMINI.md  INTEGRATION_TEST_REPORT.md  LICENSE  README.md  README_EN.md  SETUP_VERIFICATION.md  USAGE_GUIDE.md  basic_design_document.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  system_design.md  test_basic_imports.py  test_workflow.py  基本設計書.md  詳細設計書.md
.hephaestus-work/: config.yaml
.hephaestus-work/.Codex/: AGENT.md
.hephaestus-work/.hephaestus-work/: config.yaml
.hephaestus-work/cache/: last_session_state.json
.hermes_template/: config.yaml.template  docker-compose.yaml  searxng_settings.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
doc/: LANGUAGES.md  README.md  README_JA.md
doc/command/: README.md  README_JA.md  debug.md  debug_JA.md  history_EN.md  history_JA.md  history_cmd_en.md  history_cmd_ja.md  init_EN.md  init_JA.md  init_cmd_en.md  init_cmd_ja.md  log.md  log_JA.md  log_cmd_en.md  log_cmd_ja.md  queue_EN.md  queue_JA.md  run.md  run_JA.md  run_cmd_en.md  run_cmd_ja.md  task_EN.md  task_JA.md  task_cmd_en.md  task_cmd_ja.md
doc/config/: config_en.md  config_ja.md
doc/dependencies/: README.md  README_JA.md  browser-use.md  browser-use_JA.md  container-use.md  container-use_JA.md  ollama_EN.md  ollama_JA.md
doc/setup/: setup_en.md  setup_ja.md
doc/test/: README_EN.md  README_JA.md  test_task_service_en.md  test_task_service_ja.md  tests_en.md  tests_ja.md
doc/troubleshooting/: troubleshooting_en.md  troubleshooting_ja.md
docker/: docker-compose.yml
docs/: API_SPECIFICATION.md  DEVELOPMENT.md  LANGGRAPH_IMPLEMENTATION.md  MODEL_MANAGER_GUIDE.md  cli_usage.md  history_manager_guide.md  input_node.md  processing_pipeline.md  search_pipeline.md  verification_flow.md
examples/: README.md  basic_generation.py  basic_workflow_example.py  chat_bot.py  history_manager_example.py  model_comparison.py  streaming_demo.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
hermes_cli/: __init__.py  main.py
hermes_cli/agents/: __init__.py  graph.py  state.py
hermes_cli/commands/: __init__.py  debug_cmd.py  history_cmd.py  init_cmd.py  log_cmd.py  queue_cmd.py  run_cmd.py  task_cmd.py
hermes_cli/models/: __init__.py  config.py  report.py  search.py  state.py  task.py
hermes_cli/persistence/: __init__.py  config_repository.py  file_paths.py  history_repository.py  log_repository.py  task_repository.py
hermes_cli/services/: __init__.py  config_service.py  debug_service.py  history_service.py  log_service.py  queue_service.py  run_service.py  task_service.py
hermes_cli/tools/: __init__.py  browser_use_client.py  container_use_client.py  langfuse_client.py  ollama_client.py
hermes_cli/utils/: __init__.py  logging.py
sessions/session_20251113_204618/: input.md  processed_data.md  report.md  search_results.md  state.json
sessions/session_20251113_204618_905709/: input.md
src/: __init__.py
tests/: README.md  __init__.py  conftest.py  run_tests.sh  test_browser_client.py  test_config.py  test_dependencies.py  test_logging.py  test_nodes_ollama.py  test_persistence.py  test_queue_service.py  test_run_service.py
(+131 files in other folders)
