[project]
name = "hermes"
version = "0.1.0"
description = "Local Research Analyst Agent with LangGraph and Ollama"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "typing-extensions>=4.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.1.7",
    "rich>=13.9.2",
    "requests>=2.32.0",
    "ollama>=0.4.0",
    "docker>=7.0.0",
    "markdownify>=0.13.0",
    "pdfminer.six>=20231228",
    "reportlab>=4.0.0",
]

[project.scripts]
hermes = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
