[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-cli"
version = "1.0.0"
description = "A CLI-based information gathering agent using LangGraph and browser automation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hermes Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer",
    "httpx",
    "langgraph",
    "pydantic",
    "duckduckgo-search>=6.2.0",
    "dagger-io",
    "pyyaml",
    "rich",
    "watchdog",
]

[project.scripts]
hermes = "hermes_cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
browser = [
    # Install browser-use manually from source until a PyPI release is available.
    "browser-use",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_cli*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
