[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-cli"
version = "0.1.0"
description = "ローカルLLM情報収集エージェント"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Hermes Team" }
]

dependencies = [
    "click>=8.1.7",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "selenium>=4.16.0",
    "beautifulsoup4>=4.12.0",
    "redis>=5.0.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "undetected-chromedriver>=3.5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.scripts]
hermes = "hermes_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["hermes_cli"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
